--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -60,16 +60,14 @@
           <!-- my gallery -->
 <div class='gallery'>
 
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_5.png' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_5.png' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_5.png'></div>
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_4.png' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_4.png' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_4.png'></div>
-	<!-- pt 1 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_2.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg'></div>
+	<!-- Pt 1 -->
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_4.png' data-async-src-low='' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_4.png'></div>
 	<!-- pt 2 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_1.jpg' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_1.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_1.jpg'></div>
-	<!-- Pt 3 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage.png' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage.png' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg' data-async-src-low='' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg'></div>
+	<!-- pt 3 -->
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_1.jpg' data-async-src-low='' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_1.jpg'></div>
 	<!-- Pt 4 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_3.png' data-async-src-low='https://donelfantastic.github.io/assets/photo/onstage_3.png' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_3.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_3.png' data-async-src-low='' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_3.png'></div>
 </div>
 
 <!-- Mixed gallery1 -->
@@ -82,9 +80,9 @@
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a3.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a3.jpg' data-swgl-label="lightbox-example-1"></div>
 	<!-- Pt a4 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a4.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a4.jpg' data-swgl-label="lightbox-example-1"></div>
-		<!-- Pt a5 -->
+        <!-- Pt a5 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a5.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a5.jpg' data-swgl-label="lightbox-example-1"></div>
-		<!-- Pt a6 -->
+	<!-- Pt a6 -->
 	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a6.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a6.jpg' data-swgl-label="lightbox-example-1"></div>
 </div>
 
