--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donelfantastic Official</title>
   <meta name="description" content="Donelfantastic site official">
-  <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans">
+  <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans, photo gallery, onstage">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Donelfantastic">
   <link rel="icon" href="assets/favicon.png" type="image/png" />
@@ -59,43 +59,29 @@
         <div class="table-area">
           <!-- my gallery -->
 <div class='gallery'>
-
-	<!-- Pt 1 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_4.png' data-async-src-low='' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_4.png'></div>
-	<!-- pt 2 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg' data-async-src-low='' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_2.jpg'></div>
-	<!-- pt 3 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_1.jpg' data-async-src-low='' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_1.jpg'></div>
-	<!-- Pt 4 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/onstage_3.png' data-async-src-low='' data-swgl-src='https://donelfantastic.github.io/assets/photo/onstage_3.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_4.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_4.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_2.jpg' data-async-src-low='' data-swgl-src='./assets/photo/onstage_2.jpg'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_1.jpg' data-async-src-low='' data-swgl-src='./assets/photo/onstage_1.jpg'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_3.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_3.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_5.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_5.png'></div>
 </div>
 
 <!-- Mixed gallery1 -->
 <div class='gallery'>
-	<!-- Pt a1 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a1.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a1.jpg' data-swgl-label="lightbox-example-1"></div>
-	<!-- Pt a2 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a2.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a2.jpg' data-swgl-label="lightbox-example-1"></div>
-	<!-- Pt a3 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a3.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a3.jpg' data-swgl-label="lightbox-example-1"></div>
-	<!-- Pt a4 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a4.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a4.jpg' data-swgl-label="lightbox-example-1"></div>
-        <!-- Pt a5 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a5.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a5.jpg' data-swgl-label="lightbox-example-1"></div>
-	<!-- Pt a6 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/photo/a6.jpg' data-swgl-src='https://donelfantastic.github.io/assets/photo/a6.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a1.jpg' data-swgl-src='./assets/photo/a1.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a2.jpg' data-swgl-src='./assets/photo/a2.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a3.jpg' data-swgl-src='./assets/photo/a3.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a4.jpg' data-swgl-src='./assets/photo/a4.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a5.jpg' data-swgl-src='./assets/photo/a5.jpg' data-swgl-label="lightbox-example-1"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a6.jpg' data-swgl-src='./assets/photo/a6.jpg' data-swgl-label="lightbox-example-1"></div>
 </div>
 
 <!-- Mixed gallery2 -->
 <div class='gallery'>
-	<!-- Pt 1 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic12.png' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic12.png' data-swgl-label="lightbox-example-2"></div>
-	<!-- Pt 2 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic11.png' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic11.png' data-swgl-label="lightbox-example-2"></div>
-	<!-- Pt 3 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic10.jpg' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic10.jpg' data-swgl-label="lightbox-example-2"></div>
-	<!-- Pt 4 -->
-	<div class='gallery-image async-image-holder' data-async-src='https://donelfantastic.github.io/assets/donelfantastic9.jpg' data-swgl-src='https://donelfantastic.github.io/assets/donelfantastic9.jpg' data-swgl-label="lightbox-example-2"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic13.png' data-swgl-src='./assets/donelfantastic13.png' data-swgl-label="lightbox-example-2"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic12.png' data-swgl-src='./assets/donelfantastic12.png' data-swgl-label="lightbox-example-2"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic11.png' data-swgl-src='./assets/donelfantastic11.jpg' data-swgl-label="lightbox-example-2"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic1.png' data-swgl-src='./assets/donelfantastic1.png' data-swgl-label="lightbox-example-2"></div>
 </div>
 
       </section>
