--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -80,7 +80,7 @@
 <div class='gallery'>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic13.png' data-swgl-src='./assets/donelfantastic13.png' data-swgl-label="lightbox-example-2"></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic12.png' data-swgl-src='./assets/donelfantastic12.png' data-swgl-label="lightbox-example-2"></div>
-	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic11.png' data-swgl-src='./assets/donelfantastic11.jpg' data-swgl-label="lightbox-example-2"></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic11.png' data-swgl-src='./assets/donelfantastic11.png' data-swgl-label="lightbox-example-2"></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic1.png' data-swgl-src='./assets/donelfantastic1.png' data-swgl-label="lightbox-example-2"></div>
 </div>
 
