--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -60,6 +60,7 @@
           <!-- my gallery -->
 <div class='gallery'>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_4.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_4.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_6.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_6.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_2.jpg' data-async-src-low='' data-swgl-src='./assets/photo/onstage_2.jpg'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_1.jpg' data-async-src-low='' data-swgl-src='./assets/photo/onstage_1.jpg'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_3.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_3.png'></div>
@@ -76,14 +77,14 @@
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a6.jpg' data-swgl-src='./assets/photo/a6.jpg' data-swgl-label="lightbox-example-1"></div>
 </div>
 
-<!-- Mixed gallery2 -->
+<!--// Mixed Gallery
 <div class='gallery'>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic13.png' data-swgl-src='./assets/donelfantastic13.png' data-swgl-label="lightbox-example-2"></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic12.png' data-swgl-src='./assets/donelfantastic12.png' data-swgl-label="lightbox-example-2"></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic11.png' data-swgl-src='./assets/donelfantastic11.png' data-swgl-label="lightbox-example-2"></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/donelfantastic1.png' data-swgl-src='./assets/donelfantastic1.png' data-swgl-label="lightbox-example-2"></div>
 </div>
-
+//-->
       </section>
 </div>
 
