--- a/donel-tv.html
+++ b/donel-tv.html
@@ -85,7 +85,7 @@
         </div>
     </section>
   </div>
-
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="500" data-numposts="5"></div>
   <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
@@ -131,6 +131,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
 <script  src="./src/latest/script.js"></script>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0&appId=240273417408288" nonce="MM76ErFa"></script>  
 
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
