--- a/donel-tv.html
+++ b/donel-tv.html
@@ -85,6 +85,9 @@
         </div>
     </section>
   </div>
+<fieldset>
+<legend><a>FEEDBACK</a></legend>
+</fieldset>  
 <div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="500" data-numposts="5"></div>
   <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
