--- a/donel-tv.html
+++ b/donel-tv.html
@@ -83,13 +83,11 @@
         <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padsing-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
-    </section>
-  </div>
-<fieldset>
-<legend><a>FEEDBACK</a></legend>
-</fieldset>  
+   <h5 class="df_title">FEEDBACK</h5>
 <div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="500" data-numposts="5"></div>
-  <!-- SOCIAL PANEL HTML -->
+ </section>
+  </div>
+      <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
       <p>Donelfantastic<i class="fa fa-copyright"></i>2023 -
