--- a/donel-tv.html
+++ b/donel-tv.html
@@ -84,7 +84,7 @@
           <div id="display-resources" style="overflow-x: auto; padsing-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
    <h5 class="df_title">FEEDBACK</h5>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="500" data-numposts="5"></div>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div>
  </section>
   </div>
       <!-- SOCIAL PANEL HTML -->
