--- a/donel-tv.html
+++ b/donel-tv.html
@@ -81,12 +81,13 @@
 <a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>LOCAL TV</button></a></span></div> 
       <div class="table-area">
         <div id="display-number"></div>
-          <div id="display-resources" style="overflow-x: auto; padsing-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
+          <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
-   <h5 class="df_title">FEEDBACK</h5>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div>
- </section>
+      </section>
   </div>
+   <p class="df_title">FEEDBACK</p>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="1000" data-numposts="5"></div>
+ 
       <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
