--- a/donel-tv.html
+++ b/donel-tv.html
@@ -83,11 +83,9 @@
         <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
-      </section>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="auto" data-numposts="5"></div>
+ </section>
   </div>
-   <p class="df_title">FEEDBACK</p>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="1000" data-numposts="5"></div>
- 
       <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
