--- a/donel-tv.html
+++ b/donel-tv.html
@@ -83,9 +83,20 @@
         <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="auto" data-numposts="5"></div>
- </section>
+      </section>
   </div>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5">
+  <style>
+  #fbcomments, .fb_iframe_widget,
+            .fb_iframe_widget[style],
+            .fb_iframe_widget iframe[style],
+            .fb_iframe_widget span,
+            #fbcomments iframe [style]
+            {
+              width: 100% !important;
+            }
+</style></div>
+ 
       <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
