--- a/donel-tv.html
+++ b/donel-tv.html
@@ -85,17 +85,17 @@
         </div>
       </section>
   </div>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5">
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div>
   <style>
-  #fbcomments, .fb_iframe_widget,
-            .fb_iframe_widget[style],
-            .fb_iframe_widget iframe[style],
-            .fb_iframe_widget span,
-            #fbcomments iframe [style]
-            {
+  #fbcomments,
+  .fb_iframe_widget,
+  .fb_iframe_widget[style],
+  .fb_iframe_widget iframe[style],
+  .fb_iframe_widget span,
+  #fbcomments iframe [style] {
               width: 100% !important;
             }
-</style></div>
+</style>
  
       <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
