--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -85,7 +85,17 @@
         </div>
     </section>
   </div>
-
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div>
+  <style>
+  #fbcomments,
+  .fb_iframe_widget,
+  .fb_iframe_widget[style],
+  .fb_iframe_widget iframe[style],
+  .fb_iframe_widget span,
+  #fbcomments iframe [style] {
+              width: 100% !important;
+            }
+</style>
   <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
@@ -131,7 +141,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
 <script  src="./src/latest/script.min.js"></script>
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0&appId=240273417408288" nonce="MM76ErFa"></script> 
 <!-- Histats.com  START  (aync)
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4812479,4,15,170,40,00011111']);
