--- a/donel-tv.html
+++ b/donel-tv.html
@@ -93,7 +93,9 @@
   .fb_iframe_widget iframe[style],
   .fb_iframe_widget span,
   #fbcomments iframe [style] {
-              width: 100% !important;
+  width: 100% !important;
+  font-color: #ffffff;
+    
             }
 </style>
  
