--- a/donel-tv.html
+++ b/donel-tv.html
@@ -94,7 +94,7 @@
   .fb_iframe_widget span,
   #fbcomments iframe [style] {
   width: 100% !important;
-  font-color: #ffffff;
+  color: #fff;
     
             }
 </style>
