--- a/donel-tv.html
+++ b/donel-tv.html
@@ -85,7 +85,7 @@
         </div>
       </section>
   </div>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5" colorscheme="light"></div>
   <style>
   #fbcomments,
   .fb_iframe_widget,
@@ -94,9 +94,7 @@
   .fb_iframe_widget span,
   #fbcomments iframe [style] {
   width: 100% !important;
-  color: #fff;
-    
-            }
+   }
 </style>
  
       <!-- SOCIAL PANEL HTML -->
