--- a/donel-tv.html
+++ b/donel-tv.html
@@ -85,7 +85,8 @@
         </div>
       </section>
   </div>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5" colorscheme="light"></div>
+<div class="fb-background-color">  
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div></div>
   <style>
   #fbcomments,
   .fb_iframe_widget,
@@ -94,7 +95,10 @@
   .fb_iframe_widget span,
   #fbcomments iframe [style] {
   width: 100% !important;
-   }
+  }
+  .fb-background-color {
+  background: blue !important;
+  } 
 </style>
  
       <!-- SOCIAL PANEL HTML -->
