--- a/donel-tv.html
+++ b/donel-tv.html
@@ -85,8 +85,7 @@
         </div>
       </section>
   </div>
-<div class="fb-background-color">  
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div></div>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5" colorscheme="dark"></div>
   <style>
   #fbcomments,
   .fb_iframe_widget,
@@ -96,9 +95,6 @@
   #fbcomments iframe [style] {
   width: 100% !important;
   }
-  .fb-background-color {
-  background: blue !important;
-  } 
 </style>
  
       <!-- SOCIAL PANEL HTML -->
