--- a/donel-tv.html
+++ b/donel-tv.html
@@ -85,7 +85,8 @@
         </div>
       </section>
   </div>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5" colorscheme="dark"></div>
+<div id="comments">  
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div></div>
   <style>
   #fbcomments,
   .fb_iframe_widget,
@@ -95,6 +96,15 @@
   #fbcomments iframe [style] {
   width: 100% !important;
   }
+  #comments { 
+  width: 100%; 
+  float: left; 
+  font-family: Arial, Helvetica, sans-serif; 
+  color: #ffffff; 
+  }
+  #comments a { 
+  color: #ffffff; 
+  }  
 </style>
  
       <!-- SOCIAL PANEL HTML -->
