--- a/donel-tv.html
+++ b/donel-tv.html
@@ -84,27 +84,18 @@
           <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
       </section>
-  </div>
-<div id="comments">  
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div></div>
+  </div> 
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div>
   <style>
-  #fbcomments,
+  #fbcomments,#fbcomments a, 
   .fb_iframe_widget,
   .fb_iframe_widget[style],
   .fb_iframe_widget iframe[style],
   .fb_iframe_widget span,
   #fbcomments iframe [style] {
   width: 100% !important;
+  color: #ffffff !important;
   }
-  #comments { 
-  width: 100%; 
-  float: left; 
-  font-family: Arial, Helvetica, sans-serif; 
-  color: #ffffff; 
-  }
-  #comments a { 
-  color: #ffffff; 
-  }  
 </style>
  
       <!-- SOCIAL PANEL HTML -->
