--- a/donel-tv.html
+++ b/donel-tv.html
@@ -87,14 +87,13 @@
   </div> 
 <div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div>
   <style>
-  #fbcomments,#fbcomments a, 
+  #fbcomments, 
   .fb_iframe_widget,
   .fb_iframe_widget[style],
   .fb_iframe_widget iframe[style],
   .fb_iframe_widget span,
   #fbcomments iframe [style] {
   width: 100% !important;
-  color: #ffffff !important;
   }
 </style>
  
