--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donelfantastic Official</title>
   <meta name="description" content="Donelfantastic site official">
-  <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans, photo gallery, onstage">
+  <meta name="keywords" content="Nella Kharisma, Dory Harsa, DONEL, DONEL MUSIC, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans, photo gallery, onstage">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Donelfantastic">
   <link rel="icon" href="assets/favicon.png" type="image/png" />
@@ -62,8 +62,8 @@
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_4.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_4.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_6.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_6.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_2.jpg' data-async-src-low='' data-swgl-src='./assets/photo/onstage_2.jpg'></div>
-	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_1.jpg' data-async-src-low='' data-swgl-src='./assets/photo/onstage_1.jpg'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_3.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_3.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_1.jpg' data-async-src-low='' data-swgl-src='./assets/photo/onstage_1.jpg'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_5.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_5.png'></div>
 </div>
 
