--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Donelfantastic Official</title>
   <meta name="description" content="Donelfantastic site official">
-  <meta name="keywords" content="Nella Kharisma, Dory Harsa, NELLA, DORY, donelfans, nellalovers, nella kharisma lovers, rencang dory, sahabat dory, fans">
+  <meta name="keywords" content="Nella Kharisma, Dory Harsa, DONELMUSIC, DONEL MUSIC, NELLA, DORY, DONELFANS, Nellalovers, Nella Kharisma Lovers, Rencang Dory, Sahabat Dory, Keluarga Donel">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Donelfantastic">
   <link rel="icon" href="assets/favicon.png" type="image/png" />
