--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -85,7 +85,8 @@
         </div>
     </section>
   </div>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div>
+<div class="fb-background-color">
+  <div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div></div>
   <style>
   #fbcomments,
   .fb_iframe_widget,
@@ -93,8 +94,11 @@
   .fb_iframe_widget iframe[style],
   .fb_iframe_widget span,
   #fbcomments iframe [style] {
-              width: 100% !important;
-            }
+  width: 100% !important;
+  }
+  .fb-background-color {
+  background: #302e2e !important;
+  }   
 </style>
   <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
