--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -77,14 +77,16 @@
     <h5 class="df_title">DONEL<span>TV</span></h5>
     <section class="content-area">
       <div id="wrapper">
-<a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>WORLD TV</button></a><span>
-<a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>LOCAL TV</button></a></span></div> 
+<a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
+<a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span></div> 
       <div class="table-area">
         <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padsing-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
     </section>
   </div>
+  
+<!--// 
 <div class="fb-background-color">
   <div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div></div>
   <style>
@@ -100,6 +102,8 @@
   background: #302e2e !important;
   }   
 </style>
+//-->
+  
   <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
@@ -145,8 +149,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
 <script  src="./src/latest/script.min.js"></script>
+<!--//
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0&appId=240273417408288" nonce="MM76ErFa"></script> 
+//-->
 <!-- Histats.com  START  (aync)
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4812479,4,15,170,40,00011111']);
