--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -59,6 +59,8 @@
         <div class="table-area">
           <!-- my gallery -->
 <div class='gallery'>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_8.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_8.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_7.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_7.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_4.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_4.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_6.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_6.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_2.jpg' data-async-src-low='' data-swgl-src='./assets/photo/onstage_2.jpg'></div>
