--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
     <a href="./donel-gallery" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/onstage_1.jpg" class="nav__image">
       <span class="nav__title" data-title="gallery">Gallery</span>
-      <span class="nav__subtitle">On stage photo gallery</span>
+      <span class="nav__subtitle">My Gallery</span>
     </a>
     <a href="./donel-music" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/donel_3.png" class="nav__image">
       <span class="nav__title" data-title="music">Music</span>
-      <span class="nav__subtitle">My music playlist</span>
+      <span class="nav__subtitle">My Music</span>
     </a>
     <a href="./donel-tv" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/onstage.png" class="nav__image">
       <span class="nav__title" data-title="tv">Tv</span>
-      <span class="nav__subtitle">My tv show</span>
+      <span class="nav__subtitle">My TV</span>
     </a>
     <a href="./donel-disclaimer" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/donel_2.png" class="nav__image">
       <span class="nav__title" data-title="disclaimer">Disclaimer</span>
-      <span class="nav__subtitle">Site disclaimer</span>
+      <span class="nav__subtitle">Site Disclaimer</span>
     </a>
     <a href="./donel-about-us" class="nav__item">
       <img src="//donelfantastic.github.io/assets/photo/onstage_2.jpg" class="nav__image">
       <span class="nav__title" data-title="about">About</span>
-      <span class="nav__subtitle">About us</span>
+      <span class="nav__subtitle">About Us</span>
     </a>
   </nav>
   </div>
