--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -60,6 +60,7 @@
           <!-- my gallery -->
 <div class='gallery'>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_8.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_8.png'></div>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_9.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_9.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_7.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_7.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_4.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_4.png'></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/onstage_6.png' data-async-src-low='' data-swgl-src='./assets/photo/onstage_6.png'></div>
