--- a/donel-gallery.html
+++ b/donel-gallery.html
@@ -72,6 +72,7 @@
 
 <!-- Mixed gallery1 -->
 <div class='gallery'>
+	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a7.jpg' data-swgl-src='./assets/photo/a7.jpg' data-swgl-label="lightbox-example-1"></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a1.jpg' data-swgl-src='./assets/photo/a1.jpg' data-swgl-label="lightbox-example-1"></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a2.jpg' data-swgl-src='./assets/photo/a2.jpg' data-swgl-label="lightbox-example-1"></div>
 	<div class='gallery-image async-image-holder' data-async-src='./assets/photo/a3.jpg' data-swgl-src='./assets/photo/a3.jpg' data-swgl-label="lightbox-example-1"></div>
