--- a/bitmovVOD.html
+++ b/bitmovVOD.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Donelfantastic</title>
+  <title>VOD | Event Karanganyar</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -351,7 +351,7 @@
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
 
   var source = {
-   progressive:"https://donelfantastic.github.io/live/ssportsNZ.m3u8",
+   progressive:"//vidio.com/videos/7759420/common_tokenized_playlist.m3u8",
     poster:"//raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
  
