--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="./src/latest/style.css"/>
 </head>
   <video class="bg-video-wrap" poster="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@main/assets/donelfantastic12.png" loop autoplay>
-  <source src="//drive.google.com/uc?export=view&id=1TFOZY-FCxcDVs0m7oG6Hc3yzG6hImh4I" type="video/mp4">
+  <source src="//archive.org/download/flyer_5_202310/flyer_5.mp4" type="video/mp4">
   </video>
 <!--// 
 <video class="bg-video-wrap" loop autoplay>
