--- a/donel-music.html
+++ b/donel-music.html
@@ -123,6 +123,29 @@
         <p>Copyright © Infinity Music All rights reserved.</p><br></br>
       </div>
 
+     <!-- START DONELMUSIC -->
+     <div class="container-playlist">
+        <h5 class="df_title">DONEL<span> MUSIC</span></h5>
+
+        <div class="ypt_wrapper">
+          <div class="video embed-container">
+            <div id="ytpl-player4" data-dm="PLcFgrFegNiobDbUlwHw_pCV7XHtDDBA4S"></div>
+          </div>
+          <div>
+            <h2 id="ytpl-title"></h2>
+            <div id="ytpl-desc"></div>
+          </div>
+          <div class="ytpl-flexslider">
+            <ul id="ytpl-thumbs" class="ytpl--thumbs slides"></ul>
+          </div>
+        </div>
+      </div>
+      
+          <p>Description:</p>
+      <div class="bob" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 100%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+        <p>Copyright © Donel Music All rights reserved.</p><br></br>
+      </div>
+      
   <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
     <div class="social-panel">
