--- a/donel-tv.html
+++ b/donel-tv.html
@@ -148,7 +148,7 @@
   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
-<script  src="./src/latest/script.min.js"></script>
+<script  src="./src/latest/script.js"></script>
 <!--
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0&appId=240273417408288" nonce="MM76ErFa"></script>  
