--- a/Hajatan_Rakyat_Banyuwangi.html
+++ b/Hajatan_Rakyat_Banyuwangi.html
@@ -313,7 +313,7 @@
       <a id="create" href="https://instagram.com/donelfantastic"><i class="fa-brands fa-instagram"></i></a>
       <a id="programm" href="https://youtube.com/@donelfantastic"><i class="fa-brands fa-youtube"></i></a>
     </div>
-    <p class="company-name">Donel Fantastic &copy; 2023, ALL Rights Reserved</p>
+    <p class="company-name">Donel Fantastic &copy; 2023-2024, ALL Rights Reserved</p>
   </footer>
 </body>
 <script type="text/javascript" src="https://cdn.bitmovin.com/player/web/8.52.0/bitmovinplayer.js"></script>
