--- a/Hajatan_Rakyat_Banyuwangi.html
+++ b/Hajatan_Rakyat_Banyuwangi.html
@@ -37,16 +37,19 @@
       margin: 0;
       padding-bottom: 6rem;
       min-height: 100%;
-      background: rgba(44, 131, 185, 1);
+      background: #1a1717;
+      color: rgb(243, 239, 239);
+      /*background: rgba(44, 131, 185, 1);
       background: linear-gradient(to right,
           rgba(44, 131, 185, 1) 0%,
           rgba(30, 171, 227, 1) 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2c83b9', endColorstr='#1eabe3', GradientType=1);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2c83b9', endColorstr='#1eabe3', GradientType=1);*/
     }
 
     #banner {
       border-bottom: 1px solid #fff;
-      background-color: #1eabe3;
+      background: #1a1717;
+      /*background-color: #1eabe3;*/
       width: 100%;
     }
 
