--- a/Hajatan_Rakyat_Banyuwangi.html
+++ b/Hajatan_Rakyat_Banyuwangi.html
@@ -353,9 +353,10 @@
   }
 //  var currentLocation = window.location.search;
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
-
+var liveNow = "//manifest.googlevideo.com/api/manifest/hls_variant/expire/1707408098/ei/gqbEZd_0DanD6dsPx4ebgA4/ip/85.120.16.2/id/189OU76PDa4.1/source/yt_live_broadcast/requiressl/yes/xpc/EgVo2aDSNQ%3D%3D/hfr/1/playlist_duration/30/manifest_duration/30/maudio/1/spc/UWF9f4WZPnyuU86Oc7fkknpFeVc4XxxtiwBy8gk0-U3T6JU/vprv/1/go/1/pacing/0/nvgoi/1/keepalive/yes/fexp/24007246/dover/11/itag/0/playlist_type/DVR/sparams/expire%2Cei%2Cip%2Cid%2Csource%2Crequiressl%2Cxpc%2Chfr%2Cplaylist_duration%2Cmanifest_duration%2Cmaudio%2Cspc%2Cvprv%2Cgo%2Citag%2Cplaylist_type/sig/AJfQdSswRgIhAJZIslar538lbBQZlb580E6cfwnq7WzFh4A0YZ9ke6PpAiEAj2QyxodIv4F8CTuXkSdHRn-pP-rue79T1X0NyI-v-yQ%3D/file/index.m3u8";
+  
   var source = {
-   progressive:"https://manifest.googlevideo.com/api/manifest/hls_variant/expire/1707399180/ei/rIPEZeffLb_Hi9oP8fiikAc/ip/85.120.16.2/id/189OU76PDa4.1/source/yt_live_broadcast/requiressl/yes/xpc/EgVo2aDSNQ%3D%3D/hfr/1/playlist_duration/30/manifest_duration/30/maudio/1/spc/UWF9f90T6xBftvsTJW7q5WxQakPeoHZBxt7KddXVQoz3Ykg/vprv/1/go/1/pacing/0/nvgoi/1/keepalive/yes/fexp/24007246/dover/11/itag/0/playlist_type/DVR/sparams/expire%2Cei%2Cip%2Cid%2Csource%2Crequiressl%2Cxpc%2Chfr%2Cplaylist_duration%2Cmanifest_duration%2Cmaudio%2Cspc%2Cvprv%2Cgo%2Citag%2Cplaylist_type/sig/AJfQdSswRgIhAPOTliKfkOXGinAr39HV3CAzq9T-SDEZJgrZ6-yE6_HAAiEA1R65_91GCDcGGYK7dm0dBty7ENWTEgRZc9GMVs00MNI%3D/file/index.m3u8",
+   progressive: liveNow,
     poster:"", //raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif"   
   };
  
