Update and rename mnctvID.html to Test_shaka.html

--- a/iptv/Test_shaka.html
+++ b/iptv/Test_shaka.html
@@ -10,7 +10,7 @@
   </style>
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <meta name="referrer" content="no-referrer" />
-  <title>DONELFANTASTIC | MNC TV</title>
+  <title>DONELFANTASTIC</title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/shaka-player.ui.min.js' crossorigin='anonymous'></script>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/controls.min.css' crossorigin='anonymous' />
   <script async src='/cdn-cgi/challenge-platform/h/g/scripts/invisible.js?cb=6ebfddfd6fa3499c'></script>
@@ -57,6 +57,7 @@
           const ui = video['ui'];
           const controls = ui.getControls();
           const player = controls.getPlayer();
+        var linkSource ='';
           player.configure({
                 drm: {
                   clearKeys: {
@@ -69,7 +70,7 @@
                     player.addEventListener('error', onPlayerErrorEvent);
                     controls.addEventListener('error', onUIErrorEvent);
                     try {
-                      await player.load('https://av-live-cdn.mncnow.id/live/eds/MNCTV-HD/sa_dash_vmx/MNCTV-HD.mpd');
+                      await player.load('linkSource');
                       console.log('The video has now been loaded!');
                     } catch (error) {
                       onPlayerError(error);
