--- a/outnow.html
+++ b/outnow.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=Qfl7TjtD6oM"/>
-    <title>Donelfantastic</title>
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=x335D4spmSg"/>
+    <title>DONELFANTASTIC | NEW RELEASED</title>
 </head>
 <body>
     
