--- a/donel-tv.html
+++ b/donel-tv.html
@@ -82,6 +82,16 @@
       <div class="table-area">
         <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
+
+<div id="form-div2">
+<fieldset>
+<legend><h4>FEEDBACK</h4></legend>
+</fieldset>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-numposts="5" data-width="500"></div>
+<!-- partial -->
+<div id="fb-root-embed"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0&appId=240273417408288&autoLogAppEvents=1" nonce="MM76ErFa"></script></div>
+        
         </div>
       </section>
   </div> 
