--- a/donel-tv.html
+++ b/donel-tv.html
@@ -87,7 +87,7 @@
 <fieldset>
 <legend><h4>FEEDBACK</h4></legend>
 </fieldset>
-<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-numposts="5" data-width="500"></div>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-numposts="5" data-width="100%"></div>
 <!-- partial -->
 <div id="fb-root-embed"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0&appId=240273417408288&autoLogAppEvents=1" nonce="MM76ErFa"></script></div>
