--- a/donel-tv.html
+++ b/donel-tv.html
@@ -84,7 +84,7 @@
           <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
 
 <div id="form-div2">
-</h5 class="df_feedback">FEEDBACK</h5>
+<h5 class="df_feedback">FEEDBACK</h5>
 <div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-numposts="5" data-width="100%"></div>
 <!-- partial -->
 <div id="fb-root-embed"></div>
