--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -84,26 +84,16 @@
         <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padsing-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
+
+      <div id="form-div2">
+<h5 class="df_feedback">FEEDBACK</h5>
+<div class="fb-comments" data-href="https://donelfantastic.github.io/" data-numposts="5" data-width="100%"></div>
+<!-- partial -->
+<div id="fb-root-embed"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0&appId=240273417408288&autoLogAppEvents=1" nonce="MM76ErFa"></script></div>
+      
     </section>
   </div>
-  
-<!--// 
-<div class="fb-background-color">
-  <div class="fb-comments" data-href="https://donelfantastic.github.io/donel-tv" data-width="100%" data-numposts="5"></div></div>
-  <style>
-  #fbcomments,
-  .fb_iframe_widget,
-  .fb_iframe_widget[style],
-  .fb_iframe_widget iframe[style],
-  .fb_iframe_widget span,
-  #fbcomments iframe [style] {
-  width: 100% !important;
-  }
-  .fb-background-color {
-  background: #302e2e !important;
-  }   
-</style>
-//-->
   
   <!-- SOCIAL PANEL HTML -->
   <div class="social-panel-container">
@@ -150,10 +140,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
 <script  src="./src/latest/script.min.js"></script>
-<!--//
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0&appId=240273417408288" nonce="MM76ErFa"></script> 
-//-->
+
 <!-- Histats.com  START  (aync)
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4812479,4,15,170,40,00011111']);
